# npe-graph

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo_test.yml  tests.yml
examples/: circuit_diagram.rs
src/: graph.rs  id.rs  index.rs  interop.rs  lib.rs  lib_traitless.rs  library.rs  net.rs  traits.rs  traversal.rs
tests/: serialize_roundtrip.rs
